Replaced ö with &ouml;

--- a/CatOnderwerp.htm
+++ b/CatOnderwerp.htm
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type"
-content="text/html; charset=iso-8859-1">
+content="text/html; charset=utf-8">
 <meta name="Datum" content="1/11/97">
 <meta name="Versie" content="8.0.3612">
 <meta name="Template"
@@ -198,7 +198,7 @@ bordercolorlight="#FFFFFF">
           Bauernstãdtchen zum kurort (Bilder)</font></td>
         <td valign="top" width="13%" height="16"><font face="Arial Narrow">Boekje</font></td>
         <td valign="top" width="19%" height="16"><font face="Arial Narrow">G&uuml;nter
-          König</font></td>
+          K&ouml;nig</font></td>
     </tr>
     <tr>
         <td valign="top" width="24%" height="16"><font
