--- a/Europa-Wereld.htm
+++ b/Europa-Wereld.htm
@@ -329,7 +329,7 @@ werelddelen</font><img border="0" src="../WorldOnline/globe[1].gif" width="48" h
               Rheinland Westfalen<br>
               </font></a>
               <a href="http://www.hoegermann.de/index.html"><font face="Verdana" size="2" color="#800000">Landesgeschichte
-              (fam.Högermann)<br>
+              (fam.H&ouml;germann)<br>
               </font></a>
               <a href="http://de.groups.yahoo.com/group/Lippe-Forum/" target="_blank"><font face="Verdana" size="2" color="#800000">Lippe-en
               omgeving, Yahoo-groep<br>
