--- a/Jethro.htm
+++ b/Jethro.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- saved from url=(0044)http://cust.88.86.adsl.cistron.nl/index.html -->
 <HTML><HEAD><TITLE>TPG POST Barbeknoei Zaterdag 15 juni 2002</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=iso-8859-1"><LINK 
+<META http-equiv=Content-Type content="text/html; charset=utf-8"><LINK 
 href="../TPG%20POST%20Barbeknoei%20Zaterdag%2015%20juni%202002_bestanden/style.css" 
 type=text/css rel=Stylesheet>
 <META content="Microsoft FrontPage 4.0" name=GENERATOR></HEAD>
