--- a/Leestekens.htm
+++ b/Leestekens.htm
@@ -130,7 +130,7 @@ yes"><br>
             ó =<span style="mso-spacerun: yes">&nbsp; </span>0243<br>
             ô =<span style="mso-spacerun: yes">&nbsp; </span>0244<br>
             õ =<span style="mso-spacerun: yes">&nbsp; </span>0245<br>
-            ö =<span style="mso-spacerun: yes">&nbsp; </span>0246<br>
+            &ouml; =<span style="mso-spacerun: yes">&nbsp; </span>0246<br>
             ø =<span style="mso-spacerun: yes">&nbsp; </span>0248<br>
             ù =<span style="mso-spacerun: yes">&nbsp; </span>0249<br>
             ú =<span style="mso-spacerun: yes">&nbsp; </span>0250<br>
