--- a/Leestekens2.htm
+++ b/Leestekens2.htm
@@ -3923,7 +3923,7 @@
                 <td width="47" valign="top" style="width:35.35pt;border:none;border-right:solid windowtext .75pt;
   padding:0cm 2.7pt 0cm 2.7pt">
                   <p class="MsoNormal" align="right" style="text-align:right;mso-pagination:none"><span lang="DE" style="font-family:Arial;mso-bidi-font-family:&quot;Times New Roman&quot;;
-  mso-ansi-language:DE;mso-fareast-language:NL;layout-grid-mode:line">ö<o:p>
+  mso-ansi-language:DE;mso-fareast-language:NL;layout-grid-mode:line">&ouml;<o:p>
                   </o:p>
                   </span></p>
                 </td>
