--- a/Links2-Jan.htm
+++ b/Links2-Jan.htm
@@ -837,8 +837,8 @@ naam </font> </b>
               <a name="boven523" target="_blank" href="http://www.johnglaser.nl/glaser.htm">
               <font color="#800000">Glaser, Johan-, Homepage-</font></a></font></a></font></b><br>
               <a href="http://www.gironet.nl/home/wgoebel/index.html" target="_blank">
-              <font size="2" face="verdana" color="#800000"><b>Göebel,
-              Wim-, en Joke Göebel-Slingerland<br>
+              <font size="2" face="verdana" color="#800000"><b>G&ouml;ebel,
+              Wim-, en Joke G&ouml;ebel-Slingerland<br>
               </b></font></a>
               <a href="../WorldOnline/de%20Goede,%20Booij,%20Waaijer%20en%20Reijmers" target="_blank"><font size="2" face="verdana" color="#800000"><b>Goede,
               John de-, </b> <font size="2"><b>Goede, Booij, Waaijer, Reijmers<br>
@@ -982,7 +982,7 @@ Harmsen, Fielt, Olminkhof, Eugelink</font></a><br>
 Genealogie&euml;n van den-</b></font></a></font><b></a><br>
           <a name="boven591" target="_blank" href="http://www.hochstenbach.tk/">
           <font face="Verdana" size="2" color="#800000">Hochstenbach, 
-          Jo-, Höchstenbach</font></a><br>
+          Jo-, H&ouml;chstenbach</font></a><br>
 </b><a href="http://www.hoefnagels.info" target="_blank">
           <font face="Verdana" size="2" color="#800000"><b>Hoefnagels,
 Marl&eacute; van Heijst-<br>
@@ -2356,7 +2356,7 @@ Genealogie en Div. Gen. Programma's</font></a></b><font color="#800000" face="Ve
 Stamboom van de familie-</font></a></b><font color="#800000" face="Verdana" size="2"><b><br>
 </b></font><b>
 <a name="boven275" target="_blank" href="http://www.tonis.nl/home.htm">
-<font color="#800000" face="Verdana" size="2">Tönis,
+<font color="#800000" face="Verdana" size="2">T&ouml;nis,
 Henny-, Leferink op Reinink, ten Vergert en Welman</font></a></b><font color="#800000" face="Verdana" size="2"><b><br>
 </b></font><b>
 <a name="boven277" target="_blank" href="http://www.xs4all.nl/~touwslag/">
@@ -2772,7 +2772,7 @@ Andries-, Cornelis Dirkz de Swart/Zwart<br>
 </font></a>
 
 <a href="http://genealogie.zwerts.nl/" target="_blank"><font face="Verdana" size="2" color="#800000"><b>Zwerts,
-G.J.-, Meeuwisse, Ouwerkerk, Schröder, van Wandelen</b></font></a><b><font face="Verdana" size="2"><br>
+G.J.-, Meeuwisse, Ouwerkerk, Schr&ouml;der, van Wandelen</b></font></a><b><font face="Verdana" size="2"><br>
 </font></b>
 <font face="Verdana" size="2" color="#800000">
 <a name="boven315" target="_blank" href="http://www.pcvz.nl/genealogie/">
