--- a/Reserve.html
+++ b/Reserve.html
@@ -241,7 +241,7 @@ A:HOVER {text-decoration: underline;}
         Ahnen, Br&uuml;der, Familien-Mitglieder von<br>
         </font><font color="#800000"><b>Christoph Pilgram,</b></font><font color="#000000">
         geboren etwa 1580 in (Bad-) Sachsa im Harz, Deutschland.
-        Seine Nachkommen gehörten zu den ersten Glasbläsern in (Bad-)Sachsa oder
+        Seine Nachkommen geh&ouml;rten zu den ersten Glasbläsern in (Bad-)Sachsa oder
         Umgebung.
         </font></font></p>
         <p align="left"><font color="#000000" face="Verdana" size="2">F&uuml;r den Privatgebrauch
@@ -252,15 +252,15 @@ A:HOVER {text-decoration: underline;}
         Familienfotos,
         einiges &uuml;ber Glasbläser sowie &uuml;ber (Bad-) Sachsa. Nur f&uuml;r echte Kenner-auch etwas &uuml;ber
         Kunst und Orgel (+ mp3-files).</font></p>
-        <p align="left"><font color="#000000" face="Verdana" size="2">Gleich hier unten können Sie einen
+        <p align="left"><font color="#000000" face="Verdana" size="2">Gleich hier unten k&ouml;nnen Sie einen
         Suchauftrag eingeben, wodurch die betreffende
-        Site hervorgeholt wird. Weiter können Sie in zwei
+        Site hervorgeholt wird. Weiter k&ouml;nnen Sie in zwei
         Namenslisten&nbsp; Einsicht nehmen.
         Dabei w&uuml;nsche ich Ihnen Viel Erfolg.</font></p>
         <p align="left"><font color="#000000" face="Verdana" size="2">Haben Sie Ergänzungen oder
         Korrekturen, so
         lassen Sie es mich bitte wissen!
-        Dies ist per e-Mail oder &uuml;ber unser Gästebuch möglich,
+        Dies ist per e-Mail oder &uuml;ber unser Gästebuch m&ouml;glich,
         welches Sie unten finden.</font></p>
   </center>
         <p align="left"><font face="Verdana" size="2"><font color="#000000">Sollten Sie mal einen </font><font color="#800000" face="Arial">PELGRIM,
@@ -329,7 +329,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="89" hei
         <hr size="1" color="#DDDBD5">
         </a>
         <p align="left"><font
-        color="#800000" size="2" face="Verdana">HIER können Sie einen
+        color="#800000" size="2" face="Verdana">HIER k&ouml;nnen Sie einen
         Suchauftrag eingeben:</font>
         </p>
         <div align="center">
