--- a/gd/KwartEle/gd-hoofd.htm
+++ b/gd/KwartEle/gd-hoofd.htm
@@ -213,7 +213,7 @@
 </OL></OL>
 
 <OL type="1" start="42"><LI><A NAME="42"></A><A NAME="ID714"></A><B>Jann Jibben (Eiben) DEBOLDS</B> [<A HREF="#ID718">V</A>] [<A HREF="#ID719">M</A>]. Geboren 19 december 1824 te GroBheide (Dld), overleden 10 juli 1907 te Osteel Schwee op 82-jarige leeftijd. Gehuwd 30 april 1853 te Marienhafe Dld met: 
-</OL><OL type="1" start="43"><LI><A NAME="43"></A><A NAME="ID715"></A><B>Mareke Christians GöKEN</B> [<A HREF="#ID720">V</A>] [<A HREF="#ID721">M</A>]. Geboren 26 december 1828 te Upgant Schott, overleden 19 oktober 1916 te Osteel Schwee op 87-jarige leeftijd,
+</OL><OL type="1" start="43"><LI><A NAME="43"></A><A NAME="ID715"></A><B>Mareke Christians G&ouml;KEN</B> [<A HREF="#ID720">V</A>] [<A HREF="#ID721">M</A>]. Geboren 26 december 1828 te Upgant Schott, overleden 19 oktober 1916 te Osteel Schwee op 87-jarige leeftijd,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
 <LI><I>Christiana Johanna</I><A NAME="ID339"></A> (zie: <A HREF="#21">21</A>).
@@ -307,7 +307,7 @@
 <LI><I>Jann Jibben (Eiben)</I><A NAME="ID714"></A> (zie: <A HREF="#42">42</A>).
 </OL></OL>
 
-<OL type="1" start="86"><LI><A NAME="86"></A><A NAME="ID720"></A><B>Christian Cassiens GöKEN</B>. Geboren 26 december 1828 te Upgant Schott, overleden 2 juni 1881 te Muklenloog op 52-jarige leeftijd. Gehuwd 16 april 1828 te Marienhafe met: 
+<OL type="1" start="86"><LI><A NAME="86"></A><A NAME="ID720"></A><B>Christian Cassiens G&ouml;KEN</B>. Geboren 26 december 1828 te Upgant Schott, overleden 2 juni 1881 te Muklenloog op 52-jarige leeftijd. Gehuwd 16 april 1828 te Marienhafe met: 
 </OL><OL type="1" start="87"><LI><A NAME="87"></A><A NAME="ID721"></A><B>Gertjein WILLMS</B>. Geboren 21 februari 1805 te Rechtsupweg, overleden 11 september 1887 te Oster Upgant op 82-jarige leeftijd,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
@@ -404,7 +404,7 @@
 
 <HR>Generatie IX
 
-<OL type="1" start="256"><LI><A NAME="256"></A><A NAME="ID61"></A><B>Johannes Albertus PELGRIM</B> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 9 januari 1743 te Königsteel,DL, glasblazer/mede oprichter fabr, overleden 21 oktober 1824 te Vuren,GL op 81-jarige leeftijd. Gehuwd 7 augustus 1767 te Amsterdam,NH met: 
+<OL type="1" start="256"><LI><A NAME="256"></A><A NAME="ID61"></A><B>Johannes Albertus PELGRIM</B> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 9 januari 1743 te K&ouml;nigsteel,DL, glasblazer/mede oprichter fabr, overleden 21 oktober 1824 te Vuren,GL op 81-jarige leeftijd. Gehuwd 7 augustus 1767 te Amsterdam,NH met: 
 </OL><OL type="1" start="257"><LI><A NAME="257"></A><A NAME="ID104"></A><B>Margaretha (Grietje) WEEMERS</B>. Geboren ong. 1748, gedoopt (ev.luthers) , overleden 4 september 1827 te Vuren,GL,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
@@ -460,16 +460,16 @@
 
 <HR>Generatie X
 
-<OL type="1" start="512"><LI><A NAME="512"></A><A NAME="ID52"></A><B>Anthon(y) PILGRAM </B> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt (ev.luthers) 22 juni 1703 te Schönhagen,DL, glasblazer te Konigsteel Dld. Gehuwd 18 januari 1734 te Königsteel,DL met: 
-</OL><OL type="1" start="513"><LI><A NAME="513"></A><A NAME="ID53"></A><B>Maria Gertrud (Anna) EIJCKHOFF</B>. Geboren 20 december 1712 te Königsteel,DL, gedoopt (ev.luthers) , huisvrouw,
+<OL type="1" start="512"><LI><A NAME="512"></A><A NAME="ID52"></A><B>Anthon(y) PILGRAM </B> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt (ev.luthers) 22 juni 1703 te Sch&ouml;nhagen,DL, glasblazer te Konigsteel Dld. Gehuwd 18 januari 1734 te K&ouml;nigsteel,DL met: 
+</OL><OL type="1" start="513"><LI><A NAME="513"></A><A NAME="ID53"></A><B>Maria Gertrud (Anna) EIJCKHOFF</B>. Geboren 20 december 1712 te K&ouml;nigsteel,DL, gedoopt (ev.luthers) , huisvrouw,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
-<LI><I>Catharina Elisabeth</I><A NAME="ID58"></A>, gedoopt 13 oktober 1734 te Königsteel,DL, overleden 1 april 1814 te Dalem (Vuren),GL op 79-jarige leeftijd.
-<LI><I>Johann Ulrich  (Johannes)</I><A NAME="ID50"></A>, geboren ong. 1737 te Königsteel,DL, glasblazer/eigenaar glasbl.rij, overleden 6 mei 1799 te Vuren,GL.
-<LI><I>Johan Caspar Melchior</I><A NAME="ID59"></A>, gedoopt (ev.luthers) 12 maart 1738 te Königsteel,DL, glasblazer, medeoprichter fabr, overleden  op 67-jarige leeftijd, begraven 18 februari 1806 te Vuren,GL.
-<LI><I>Catharina Sophia</I><A NAME="ID60"></A>, gedoopt (ev.luthers) 25 juli 1740 te Königsteel,DL.
+<LI><I>Catharina Elisabeth</I><A NAME="ID58"></A>, gedoopt 13 oktober 1734 te K&ouml;nigsteel,DL, overleden 1 april 1814 te Dalem (Vuren),GL op 79-jarige leeftijd.
+<LI><I>Johann Ulrich  (Johannes)</I><A NAME="ID50"></A>, geboren ong. 1737 te K&ouml;nigsteel,DL, glasblazer/eigenaar glasbl.rij, overleden 6 mei 1799 te Vuren,GL.
+<LI><I>Johan Caspar Melchior</I><A NAME="ID59"></A>, gedoopt (ev.luthers) 12 maart 1738 te K&ouml;nigsteel,DL, glasblazer, medeoprichter fabr, overleden  op 67-jarige leeftijd, begraven 18 februari 1806 te Vuren,GL.
+<LI><I>Catharina Sophia</I><A NAME="ID60"></A>, gedoopt (ev.luthers) 25 juli 1740 te K&ouml;nigsteel,DL.
 <LI><I>Johannes Albertus</I><A NAME="ID61"></A> (zie: <A HREF="#256">256</A>).
-<LI><I>Arnold Christiaan</I><A NAME="ID62"></A>, gedoopt (ev.luthers) 5 september 1745 te Königsteel,DL, glasblazer?, overleden 8 januari 1814 te Vuren,GL op 68-jarige leeftijd.
+<LI><I>Arnold Christiaan</I><A NAME="ID62"></A>, gedoopt (ev.luthers) 5 september 1745 te K&ouml;nigsteel,DL, glasblazer?, overleden 8 januari 1814 te Vuren,GL op 68-jarige leeftijd.
 <LI><I>Frederik George</I><A NAME="ID229"></A>, geboren 31 maart 1750 te Isselt,GL, gedoopt (ev.luthers) 31 mei 1750 te Amersfoort,UT, glasblazer/mede oprichter fabr, overleden 22 april 1829 te Vuren,GL op 79-jarige leeftijd.
 <LI><I>Johan Justus (Georg)</I><A NAME="ID66"></A>, gedoopt (ev.luthers) 10 juni 1753 te Rotterdam,ZH.
 </OL></OL>
@@ -484,21 +484,21 @@
 
 <HR>Generatie XI
 
-<OL type="1" start="1024"><LI><A NAME="1024"></A><A NAME="ID54"></A><B>Johannes (Hans) PILGRAM</B> [<A HREF="#ID204">V</A>] [<A HREF="#ID337">M</A>]. Geboren 1659 te Bad Sachsa,DL, gedoopt (ev.luthers) ongeveer 1659 te Bad Sachsa,DL, glasblazer in Duitsland, overleden 24 maart 1740 te Königsteel,DL op 81-jarige leeftijd. Gehuwd 24 maart 1690 te Schönhagen,DL met: 
+<OL type="1" start="1024"><LI><A NAME="1024"></A><A NAME="ID54"></A><B>Johannes (Hans) PILGRAM</B> [<A HREF="#ID204">V</A>] [<A HREF="#ID337">M</A>]. Geboren 1659 te Bad Sachsa,DL, gedoopt (ev.luthers) ongeveer 1659 te Bad Sachsa,DL, glasblazer in Duitsland, overleden 24 maart 1740 te K&ouml;nigsteel,DL op 81-jarige leeftijd. Gehuwd 24 maart 1690 te Sch&ouml;nhagen,DL met: 
 </OL><OL type="1" start="1025"><LI><A NAME="1025"></A><A NAME="ID55"></A><B>Anna Maria KAUFFELS</B> [<A HREF="#ID357">V</A>] [<A HREF="#ID358">M</A>]. Gedoopt (ev.luthers) , huisvrouw/moeder v 11 kinderen,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
-<LI><I>Jurgen Christoffel</I><A NAME="ID220"></A>, geboren 3 juli 1690 te Schönhagen,DL, gedoopt 6 juli 1690 te Schönhagen,DL.
-<LI><I>Anna Regina</I><A NAME="ID221"></A>, gedoopt 4 november 1691 te Schönhagen,DL.
-<LI><I>Christiaan Christoffel</I><A NAME="ID222"></A>, geboren 25 maart 1693 te Schönhagen,DL, gedoopt 27 maart 1693 te Schönhagen,DL.
+<LI><I>Jurgen Christoffel</I><A NAME="ID220"></A>, geboren 3 juli 1690 te Sch&ouml;nhagen,DL, gedoopt 6 juli 1690 te Sch&ouml;nhagen,DL.
+<LI><I>Anna Regina</I><A NAME="ID221"></A>, gedoopt 4 november 1691 te Sch&ouml;nhagen,DL.
+<LI><I>Christiaan Christoffel</I><A NAME="ID222"></A>, geboren 25 maart 1693 te Sch&ouml;nhagen,DL, gedoopt 27 maart 1693 te Sch&ouml;nhagen,DL.
 <LI><I>Margaretha Elisabeth</I><A NAME="ID223"></A>, gedoopt 10 november 1695 te Derenthal,DL.
 <LI><I>Dorothea Marlene</I><A NAME="ID224"></A>, gedoopt 22 februari 1697 te Derenthal,DL.
 <LI><I>NN</I><A NAME="ID225"></A>, gedoopt 23 april 1699 te Derenthal,DL.
 <LI><I>Anna Dorothea</I><A NAME="ID226"></A>, geboren ong. 1701 te Derenthal,DL.
 <LI><I>Anthon(y)</I><A NAME="ID52"></A> (zie: <A HREF="#512">512</A>).
-<LI><I>Catharina Elisabeth</I><A NAME="ID227"></A>, geboren 11 mei 1706 te Schönhagen,DL, overleden 9 juli 1743 te Königsteel,DL op 37-jarige leeftijd.
-<LI><I>Ilse Catharina</I><A NAME="ID228"></A>, geboren 11 mei 1708 te Schönhagen,DL, gedoopt 13 mei 1708 te Schönhagen,DL.
-<LI><I>Johann Friedrich</I><A NAME="ID95"></A>, geboren 1711, gedoopt (ev.luthers) 1711 te Tunnickenborn,Dl, glasblazer, overleden 5 oktober 1730 te Königsteel,DL op 19-jarige leeftijd.
+<LI><I>Catharina Elisabeth</I><A NAME="ID227"></A>, geboren 11 mei 1706 te Sch&ouml;nhagen,DL, overleden 9 juli 1743 te K&ouml;nigsteel,DL op 37-jarige leeftijd.
+<LI><I>Ilse Catharina</I><A NAME="ID228"></A>, geboren 11 mei 1708 te Sch&ouml;nhagen,DL, gedoopt 13 mei 1708 te Sch&ouml;nhagen,DL.
+<LI><I>Johann Friedrich</I><A NAME="ID95"></A>, geboren 1711, gedoopt (ev.luthers) 1711 te Tunnickenborn,Dl, glasblazer, overleden 5 oktober 1730 te K&ouml;nigsteel,DL op 19-jarige leeftijd.
 </OL></OL>
 
 <OL type="1" start="1056"><LI><A NAME="1056"></A><A NAME="ID2749"></A><B>Rijk Stoffelse van ASCH</B>. Gehuwd met: 
@@ -520,8 +520,8 @@
 <LI><I>Hans Wilhelm</I><A NAME="ID1054"></A>, geboren  april 1673 te Bad Sachsa, Dld, overleden  op 1-jarige leeftijd, begraven 30 augustus 1674 te Bad Sachsa,Dld.
 </OL></OL>
 
-<OL type="1" start="2050"><LI><A NAME="2050"></A><A NAME="ID357"></A><B>Jurgen KAUFFELS</B>. Geboren ong. 1630, glasblaser, overleden 27 oktober 1680 te Schönhagen,DL. Gehuwd met: 
-</OL><OL type="1" start="2051"><LI><A NAME="2051"></A><A NAME="ID358"></A><B>Ilsabein LUBKE</B>. Geboren ong. 1633, overleden 2 oktober 1686 te Schönhagen,DL,
+<OL type="1" start="2050"><LI><A NAME="2050"></A><A NAME="ID357"></A><B>Jurgen KAUFFELS</B>. Geboren ong. 1630, glasblaser, overleden 27 oktober 1680 te Sch&ouml;nhagen,DL. Gehuwd met: 
+</OL><OL type="1" start="2051"><LI><A NAME="2051"></A><A NAME="ID358"></A><B>Ilsabein LUBKE</B>. Geboren ong. 1633, overleden 2 oktober 1686 te Sch&ouml;nhagen,DL,
 <BR>Uit dit huwelijk: 
 <OL type=" start="1">
 <LI><I>Anna Maria</I><A NAME="ID55"></A> (zie: <A HREF="#1025">1025</A>).
