--- a/gd/KwartEle/gd-index.htm
+++ b/gd/KwartEle/gd-index.htm
@@ -53,7 +53,7 @@
 <B>GRELMAN</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID276" target="RD">Sophia Bernhardina</A>
 </UL>
-<B>GöKEN</B><UL>
+<B>G&ouml;KEN</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID720" target="RD">Christian Cassiens</A>
 <LI><A HREF="gd-hoofd.htm#ID715" target="RD">Mareke Christians</A>
 </UL>
