--- a/gd/Roepman/gd-hoofd.htm
+++ b/gd/Roepman/gd-hoofd.htm
@@ -140,7 +140,7 @@ Achterkleinkinderen:
 
 <BR><B><A NAME="IV.12"></A> IV.12 Dina Elizabeth ROEPMAN</B><A NAME="ID738"></A> [<A HREF="#ID712">V</A>] [<A HREF="#ID713">M</A>]. Geboren 17 juli 1874 te Rotterdam,ZH
 
-<BR><B><A NAME="IV.13"></A> IV.13 Johannes ROEPMAN</B><A NAME="ID338"></A> [<A HREF="#ID712">V</A>] [<A HREF="#ID713">M</A>]. Geboren 26 december 1876 te Rotterdam, veehandelaar, overleden 12 oktober 1949 te Rotterdam,ZH op 72-jarige leeftijd. Tr. 16 januari 1901 te Rotterdam,ZH <A NAME="ID339"></A><B>Christiana Johanna DEBOLDS</B>, geboren 3 maart 1870 te Osteel Dld  (Pruisen)<A NAME="ID714"></A><A NAME="ID715"></A>, dochter van Jann Eiben (Eiben) DEBOLDS en Marikeke Christiana GöKEN, overleden 17 december 1937 te Schiebroek,ZH op 67-jarige leeftijd.
+<BR><B><A NAME="IV.13"></A> IV.13 Johannes ROEPMAN</B><A NAME="ID338"></A> [<A HREF="#ID712">V</A>] [<A HREF="#ID713">M</A>]. Geboren 26 december 1876 te Rotterdam, veehandelaar, overleden 12 oktober 1949 te Rotterdam,ZH op 72-jarige leeftijd. Tr. 16 januari 1901 te Rotterdam,ZH <A NAME="ID339"></A><B>Christiana Johanna DEBOLDS</B>, geboren 3 maart 1870 te Osteel Dld  (Pruisen)<A NAME="ID714"></A><A NAME="ID715"></A>, dochter van Jann Eiben (Eiben) DEBOLDS en Marikeke Christiana G&ouml;KEN, overleden 17 december 1937 te Schiebroek,ZH op 67-jarige leeftijd.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start="1">
