--- a/gd/Roepman/gd-index.htm
+++ b/gd/Roepman/gd-index.htm
@@ -72,7 +72,7 @@
 <B>GOEDKOOP</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID3171" target="RD">Maria</A>
 </UL>
-<B>GöKEN</B><UL>
+<B>G&ouml;KEN</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID715" target="RD">Marikeke Christiana</A>
 </UL>
 <B>HAAN</B><UL>
