--- a/gd/pelgrimb/gd-hoofd.htm
+++ b/gd/pelgrimb/gd-hoofd.htm
@@ -16,7 +16,7 @@
 
 <HR>
 Kinderen:
-<BR><B><A NAME="II.1"></A> II.1</B><B> Johann Friedrich (Rudolph) PILGRIM</B><A NAME="ID1805"></A> [<A HREF="#ID1806">V</A>] [<A HREF="#ID1807">M</A>]. Geboren te Bielefeld, Heuermann in Ueffeln, overleden 25 april 1805 te Ueffeln. Tr. 4 december 1787 te Ueffeln <A NAME="ID1808"></A><B>Anna Maria AHRMANN</B>, geboren 31 januari 1751 te Ueffeln, overleden 18 maart 1844 te Sögeln op 93-jarige leeftijd, begraven 20 maart 1844 te Sögeln.
+<BR><B><A NAME="II.1"></A> II.1</B><B> Johann Friedrich (Rudolph) PILGRIM</B><A NAME="ID1805"></A> [<A HREF="#ID1806">V</A>] [<A HREF="#ID1807">M</A>]. Geboren te Bielefeld, Heuermann in Ueffeln, overleden 25 april 1805 te Ueffeln. Tr. 4 december 1787 te Ueffeln <A NAME="ID1808"></A><B>Anna Maria AHRMANN</B>, geboren 31 januari 1751 te Ueffeln, overleden 18 maart 1844 te S&ouml;geln op 93-jarige leeftijd, begraven 20 maart 1844 te S&ouml;geln.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -46,7 +46,7 @@ Tr.(2)  8 maart 1834 te Slochteren <A NAME="ID1816"></A><B>Geeltje Willems BAKKE
 </OL>
 
 
-<BR><B><A NAME="III.3"></A> III.3</B><B> Johann Heinrich PILGRIM</B><A NAME="ID1811"></A> [<A HREF="#ID1805">V</A>] [<A HREF="#ID1808">M</A>]. Geboren 19 april 1795 te Ueffeln, Heuermann in Ueffeln, overleden 14 oktober 1827 te Amsterdam op 32-jarige leeftijd, begraven 16 oktober 1827 te Amsterdam. Tr. 1820 te Ueffeln <A NAME="ID1812"></A><B>Catharina Maria BöNING</B>, geboren 5 december 1794 te Rieste, Dld, gedoopt 12 december 1794 te Rieste, Dld, overleden 23 juni 1873 te Hesepe, Dld op 78-jarige leeftijd, begraven 26 juni 1873 te Hesepe, Dld.
+<BR><B><A NAME="III.3"></A> III.3</B><B> Johann Heinrich PILGRIM</B><A NAME="ID1811"></A> [<A HREF="#ID1805">V</A>] [<A HREF="#ID1808">M</A>]. Geboren 19 april 1795 te Ueffeln, Heuermann in Ueffeln, overleden 14 oktober 1827 te Amsterdam op 32-jarige leeftijd, begraven 16 oktober 1827 te Amsterdam. Tr. 1820 te Ueffeln <A NAME="ID1812"></A><B>Catharina Maria B&ouml;NING</B>, geboren 5 december 1794 te Rieste, Dld, gedoopt 12 december 1794 te Rieste, Dld, overleden 23 juni 1873 te Hesepe, Dld op 78-jarige leeftijd, begraven 26 juni 1873 te Hesepe, Dld.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -54,7 +54,7 @@ Tr.(2)  8 maart 1834 te Slochteren <A NAME="ID1816"></A><B>Geeltje Willems BAKKE
 </OL>
 
 
-<BR><B><A NAME="III.4"></A> III.4</B><B> Catherine Maria Elsabein PILGRIM</B><A NAME="ID1813"></A> [<A HREF="#ID1805">V</A>] [<A HREF="#ID1808">M</A>]. Geboren 18 oktober 1798 te Ueffeln, overleden 6 juli 1843 op 44-jarige leeftijd, begraven 8 juli 1843. Tr. te Ueffeln <A NAME="ID1814"></A><B>Dorjes NN</B>, Kötter und Stein-hauer in Ueffeln
+<BR><B><A NAME="III.4"></A> III.4</B><B> Catherine Maria Elsabein PILGRIM</B><A NAME="ID1813"></A> [<A HREF="#ID1805">V</A>] [<A HREF="#ID1808">M</A>]. Geboren 18 oktober 1798 te Ueffeln, overleden 6 juli 1843 op 44-jarige leeftijd, begraven 8 juli 1843. Tr. te Ueffeln <A NAME="ID1814"></A><B>Dorjes NN</B>, K&ouml;tter und Stein-hauer in Ueffeln
 
 
 <HR>
@@ -248,7 +248,7 @@ Tr.(2)  24 februari 1901 te Groningen <A NAME="ID1865"></A><B>Ike SJOERTS</B>, g
 
 <BR><B><A NAME="V.23"></A> V.23</B><B> Herman Hendrik Rudolph PELGRIM</B><A NAME="ID1864"></A> [<A HREF="#ID1685">V</A>] [<A HREF="#ID1686">M</A>]. Geboren 11 april 1881 te Harkstede, overleden 20 juli 1883 te Harkstede op 2-jarige leeftijd
 
-<BR><B><A NAME="V.24"></A> V.24</B><B> Johann Heinrich PILGRIM</B><A NAME="ID1893"></A> [<A HREF="#ID1890">V</A>] [<A HREF="#ID1891">M</A>]. Geboren 4 oktober 1852 te Sögeln, Dld, gedoopt 31 oktober 1852 te Sögeln, Dld
+<BR><B><A NAME="V.24"></A> V.24</B><B> Johann Heinrich PILGRIM</B><A NAME="ID1893"></A> [<A HREF="#ID1890">V</A>] [<A HREF="#ID1891">M</A>]. Geboren 4 oktober 1852 te S&ouml;geln, Dld, gedoopt 31 oktober 1852 te S&ouml;geln, Dld
 
 <BR><B><A NAME="V.25"></A> V.25</B><B> Catharine Regine PILGRIM</B><A NAME="ID1894"></A> [<A HREF="#ID1890">V</A>] [<A HREF="#ID1891">M</A>]. Geboren 23 november 1855 te Rieste, Dld, gedoopt 9 december 1855 te Rieste, Dld, overleden 6 februari 1859 te Rieste, Dld op 3-jarige leeftijd, begraven 9 februari 1859 te Rieste, Dld
 
