--- a/gd/pelgrimb/gd-index.htm
+++ b/gd/pelgrimb/gd-index.htm
@@ -40,7 +40,7 @@
 <LI><A HREF="gd-hoofd.htm#ID1868" target="RD">Geert</A>
 <LI><A HREF="gd-hoofd.htm#ID1847" target="RD">Itje</A>
 </UL>
-<B>BöNING</B><UL>
+<B>B&ouml;NING</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID1812" target="RD">Catharina Maria</A>
 </UL>
 <B>DRAIJER</B><UL>
