--- a/gd/pelgrime/gd-hoofd.htm
+++ b/gd/pelgrime/gd-hoofd.htm
@@ -196,7 +196,7 @@ Tr.(3)  1872 <A NAME="ID2415"></A><B>Hendrika KRUITBOS</B>, geboren ong.1840.
 <OL type=" start="1">
 <LI><I>Gradus PELGRIM</I><A NAME="ID2441"></A>, volgt <A HREF="#VIII.11">VIII.11</A>
 <LI><I>Lambertus PELGRIM</I><A NAME="ID2442"></A>, volgt <A HREF="#VIII.12">VIII.12</A>
-<LI><I>Joannes Hijacinthus PELGRöM</I><A NAME="ID2444"></A>, volgt <A HREF="#VIII.13">VIII.13</A>
+<LI><I>Joannes Hijacinthus PELGR&ouml;M</I><A NAME="ID2444"></A>, volgt <A HREF="#VIII.13">VIII.13</A>
 <LI><I>Hermangildus PELGROM</I><A NAME="ID2449"></A>, volgt <A HREF="#VIII.14">VIII.14</A>
 </OL>
 
@@ -349,7 +349,7 @@ Generatie VIII
 
 <BR><B><A NAME="VIII.12"></A> VIII.12 Lambertus PELGRIM</B><A NAME="ID2442"></A> [<A HREF="#ID2264">V</A>] [<A HREF="#ID2263">M</A>]. Geboren 9 juli 1850, overleden 10 april 1919 te Olst op 68-jarige leeftijd. Tr. <A NAME="ID2443"></A><B>(Weduwe) Johanna RUITER-LOBBERT</B>, geboren ong.1850
 
-<BR><B><A NAME="VIII.13"></A> VIII.13 Joannes Hijacinthus PELGRöM</B><A NAME="ID2444"></A> [<A HREF="#ID2264">V</A>] [<A HREF="#ID2263">M</A>]. Geboren 16 augustus 1853, overleden 26 september 1894 op 41-jarige leeftijd. Tr. 16 september 1882 <A NAME="ID2445"></A><B>Lamberdina ((dochter Th.Pelgrum)) TIJHUIS</B>, geboren ong.1853
+<BR><B><A NAME="VIII.13"></A> VIII.13 Joannes Hijacinthus PELGR&ouml;M</B><A NAME="ID2444"></A> [<A HREF="#ID2264">V</A>] [<A HREF="#ID2263">M</A>]. Geboren 16 augustus 1853, overleden 26 september 1894 op 41-jarige leeftijd. Tr. 16 september 1882 <A NAME="ID2445"></A><B>Lamberdina ((dochter Th.Pelgrum)) TIJHUIS</B>, geboren ong.1853
 
 <BR><B><A NAME="VIII.14"></A> VIII.14 Hermangildus PELGROM</B><A NAME="ID2449"></A> [<A HREF="#ID2264">V</A>] [<A HREF="#ID2263">M</A>]. Geboren 13 april 1856. Tr. 20 mei 1882 <A NAME="ID2450"></A><B>Willemina WILGERS</B>, geboren ong.1856 te Diepenveen
 
@@ -555,7 +555,7 @@ gegevens weggehaald<br>
 
 <BR><B><A NAME="IX.26"></A> IX.26 Heinrich Theodor PELGRIM</B><A NAME="ID2059"></A> [<A HREF="#ID2042">V</A>] [<A HREF="#ID2053">M</A>]. Geboren 17 juni 1910 te Bocholt-Westfalen, overleden 20 juni 1985 te Bocholt-Westfalen op 75-jarige leeftijd, begraven 24 juni 1985 te Bocholt-Westfalen. Tr. 4 oktober 1934 <A NAME="ID2083"></A><B>Christine GRINTZ</B>, geboren 5 januari 1910, overleden 14 augustus 2002 op 92-jarige leeftijd
 
-<BR><B><A NAME="IX.27"></A> IX.27 Maria Elisabeth PELGRIM</B><A NAME="ID2060"></A> [<A HREF="#ID2042">V</A>] [<A HREF="#ID2053">M</A>]. Geboren 5 september 1911 te Bocholt-Westfalen, overleden 10 september 2005 te Bocholt-Westfalen op 94-jarige leeftijd. Tr. 8 november 1938 <A NAME="ID2084"></A><B>Gerhard METELING</B>, geboren 19 oktober 1908 te Bocholt-Westfalen<A NAME="ID2085"></A><A NAME="ID2086"></A>, zoon van Johann METELING en Wilhelmina SCHRöER.
+<BR><B><A NAME="IX.27"></A> IX.27 Maria Elisabeth PELGRIM</B><A NAME="ID2060"></A> [<A HREF="#ID2042">V</A>] [<A HREF="#ID2053">M</A>]. Geboren 5 september 1911 te Bocholt-Westfalen, overleden 10 september 2005 te Bocholt-Westfalen op 94-jarige leeftijd. Tr. 8 november 1938 <A NAME="ID2084"></A><B>Gerhard METELING</B>, geboren 19 oktober 1908 te Bocholt-Westfalen<A NAME="ID2085"></A><A NAME="ID2086"></A>, zoon van Johann METELING en Wilhelmina SCHR&ouml;ER.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start="1">
