--- a/gd/pelgrime/gd-index.htm
+++ b/gd/pelgrime/gd-index.htm
@@ -510,7 +510,7 @@
 <B>PELGRUMS</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID2529" target="RD">Pelgrim</A>
 </UL>
-<B>PELGRöM</B><UL>
+<B>PELGR&ouml;M</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID2444" target="RD">Joannes Hijacinthus</A>
 </UL>
 <B>POL</B><UL>
@@ -555,7 +555,7 @@
 <B>SCHOOT</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID2454" target="RD">Joannes</A>
 </UL>
-<B>SCHRöER</B><UL>
+<B>SCHR&ouml;ER</B><UL>
 <LI><A HREF="gd-hoofd.htm#ID2086" target="RD">Wilhelmina</A>
 </UL>
 <B>SCHUTTEN</B><UL>
