--- a/gd/pelgrimf/gd-hoofd.htm
+++ b/gd/pelgrimf/gd-hoofd.htm
@@ -43,7 +43,7 @@ Kleinkinderen:
 
 <HR>
 Achterkleinkinderen:
-<BR><B><A NAME="IV.1"></A> IV.1</B><B> Johannes (Hans) PILGRAM</B><A NAME="ID54"></A> [<A HREF="#ID204">V</A>] [<A HREF="#ID337">M</A>]. Geboren te Bad Sachsa,DL, gedoopt (ev.luthers) ong. 1659 te Bad Sachsa,DL, glasblazer in Duitsland, overleden 24 maart 1740 te Königsteel,DL. Tr. 24 maart 1690 te Schönhagen,DL <A NAME="ID55"></A><B>Anna Maria KAUFFELS</B><A NAME="ID357"></A><A NAME="ID358"></A>, dochter van Jurgen KAUFFELS en Ilsabein LUBKE, gedoopt (ev.luthers) , huisvrouw/moeder v 11 kinderen.
+<BR><B><A NAME="IV.1"></A> IV.1</B><B> Johannes (Hans) PILGRAM</B><A NAME="ID54"></A> [<A HREF="#ID204">V</A>] [<A HREF="#ID337">M</A>]. Geboren te Bad Sachsa,DL, gedoopt (ev.luthers) ong. 1659 te Bad Sachsa,DL, glasblazer in Duitsland, overleden 24 maart 1740 te K&ouml;nigsteel,DL. Tr. 24 maart 1690 te Sch&ouml;nhagen,DL <A NAME="ID55"></A><B>Anna Maria KAUFFELS</B><A NAME="ID357"></A><A NAME="ID358"></A>, dochter van Jurgen KAUFFELS en Ilsabein LUBKE, gedoopt (ev.luthers) , huisvrouw/moeder v 11 kinderen.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -68,11 +68,11 @@ Achterkleinkinderen:
 
 <HR>
 Generatie V
-<BR><B><A NAME="V.1"></A> V.1</B><B> Jurgen Christoffel PILGRAM</B><A NAME="ID220"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 3 juli 1690 te Schönhagen,DL, gedoopt 6 juli 1690 te Schönhagen,DL. Tr. 10 januari 1718 te Schönhagen,DL <A NAME="ID359"></A><B>Anna Margaretha SCHLIEKER</B>, geboren ong. 1697
+<BR><B><A NAME="V.1"></A> V.1</B><B> Jurgen Christoffel PILGRAM</B><A NAME="ID220"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 3 juli 1690 te Sch&ouml;nhagen,DL, gedoopt 6 juli 1690 te Sch&ouml;nhagen,DL. Tr. 10 januari 1718 te Sch&ouml;nhagen,DL <A NAME="ID359"></A><B>Anna Margaretha SCHLIEKER</B>, geboren ong. 1697
 
-<BR><B><A NAME="V.2"></A> V.2</B><B> Anna Regina PILGRAM</B><A NAME="ID221"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt 4 november 1691 te Schönhagen,DL
+<BR><B><A NAME="V.2"></A> V.2</B><B> Anna Regina PILGRAM</B><A NAME="ID221"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt 4 november 1691 te Sch&ouml;nhagen,DL
 
-<BR><B><A NAME="V.3"></A> V.3</B><B> Christiaan Christoffel PILGRAM</B><A NAME="ID222"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 25 maart 1693 te Schönhagen,DL, gedoopt 27 maart 1693 te Schönhagen,DL
+<BR><B><A NAME="V.3"></A> V.3</B><B> Christiaan Christoffel PILGRAM</B><A NAME="ID222"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 25 maart 1693 te Sch&ouml;nhagen,DL, gedoopt 27 maart 1693 te Sch&ouml;nhagen,DL
 
 <BR><B><A NAME="V.4"></A> V.4</B><B> Margaretha Elisabeth PILGRAM</B><A NAME="ID223"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt 10 november 1695 te Derenthal,DL
 
@@ -80,10 +80,10 @@ Generatie V
 
 <BR><B><A NAME="V.6"></A> V.6</B><B> NN PILGRAM</B><A NAME="ID225"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt 23 april 1699 te Derenthal,DL
 
-<BR><B><A NAME="V.7"></A> V.7</B><B> Anna Dorothea PILGRAM</B><A NAME="ID226"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren ong. 1701 te Derenthal,DL. Tr. 1748 te Königsteel,DL <A NAME="ID397"></A><B>Johan Christiaan GUNDELACH</B>, geboren ong. 1695
+<BR><B><A NAME="V.7"></A> V.7</B><B> Anna Dorothea PILGRAM</B><A NAME="ID226"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren ong. 1701 te Derenthal,DL. Tr. 1748 te K&ouml;nigsteel,DL <A NAME="ID397"></A><B>Johan Christiaan GUNDELACH</B>, geboren ong. 1695
 
-<BR><B><A NAME="V.8"></A> V.8</B><B> Anthony PILGRAM </B><A NAME="ID52"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt (ev.luthers) 22 juni 1703 te Schönhagen,DL, glasblazer te Konigsteel Dld, overleden in of na 1768. Tr.(1)  <A NAME="ID3042"></A><B>Engel Maria KRUMSIEG</B>, geboren ong.1704, overleden 1 januari 1731
-Tr.(2)  18 januari 1734 te Königsteel,DL <A NAME="ID53"></A><B>Maria Gertrud (Anna) EIJCKHOFF</B>, geboren 20 december 1712 te Königsteel,DL, gedoopt (ev.luthers) , huisvrouw, overleden in of na 1768.
+<BR><B><A NAME="V.8"></A> V.8</B><B> Anthony PILGRAM </B><A NAME="ID52"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Gedoopt (ev.luthers) 22 juni 1703 te Sch&ouml;nhagen,DL, glasblazer te Konigsteel Dld, overleden in of na 1768. Tr.(1)  <A NAME="ID3042"></A><B>Engel Maria KRUMSIEG</B>, geboren ong.1704, overleden 1 januari 1731
+Tr.(2)  18 januari 1734 te K&ouml;nigsteel,DL <A NAME="ID53"></A><B>Maria Gertrud (Anna) EIJCKHOFF</B>, geboren 20 december 1712 te K&ouml;nigsteel,DL, gedoopt (ev.luthers) , huisvrouw, overleden in of na 1768.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -98,16 +98,16 @@ Tr.(2)  18 januari 1734 te Königsteel,DL <A NAME="ID53"></A><B>Maria Gertrud (An
 </OL>
 
 
-<BR><B><A NAME="V.9"></A> V.9</B><B> Catharina Elisabeth PILGRAM</B><A NAME="ID227"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 11 mei 1706 te Schönhagen,DL, overleden 9 juli 1743 te Königsteel,DL op 37-jarige leeftijd. Tr. 26 september 1731 te Königsteel,DL <A NAME="ID398"></A><B>Herman Albert HUNNINGHAUSEN</B>, geboren ong. 1700, overleden ong. 1769 te Königsteel,DL
+<BR><B><A NAME="V.9"></A> V.9</B><B> Catharina Elisabeth PILGRAM</B><A NAME="ID227"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 11 mei 1706 te Sch&ouml;nhagen,DL, overleden 9 juli 1743 te K&ouml;nigsteel,DL op 37-jarige leeftijd. Tr. 26 september 1731 te K&ouml;nigsteel,DL <A NAME="ID398"></A><B>Herman Albert HUNNINGHAUSEN</B>, geboren ong. 1700, overleden ong. 1769 te K&ouml;nigsteel,DL
 
-<BR><B><A NAME="V.10"></A> V.10</B><B> Ilse Catharina PILGRAM</B><A NAME="ID228"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 11 mei 1708 te Schönhagen,DL, gedoopt 13 mei 1708 te Schönhagen,DL. Tr. te Steele (bij Essen),DL <A NAME="ID360"></A><B>Albert HUNNINGHAUSEN</B>
+<BR><B><A NAME="V.10"></A> V.10</B><B> Ilse Catharina PILGRAM</B><A NAME="ID228"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 11 mei 1708 te Sch&ouml;nhagen,DL, gedoopt 13 mei 1708 te Sch&ouml;nhagen,DL. Tr. te Steele (bij Essen),DL <A NAME="ID360"></A><B>Albert HUNNINGHAUSEN</B>
 
-<BR><B><A NAME="V.11"></A> V.11</B><B> Johann Friedrich PILGRAM</B><A NAME="ID95"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 1711, gedoopt (ev.luthers) 1711 te Tunnickenborn,Dl, glasblazer, overleden 5 oktober 1730 te Königsteel,DL op 19-jarige leeftijd
+<BR><B><A NAME="V.11"></A> V.11</B><B> Johann Friedrich PILGRAM</B><A NAME="ID95"></A> [<A HREF="#ID54">V</A>] [<A HREF="#ID55">M</A>]. Geboren 1711, gedoopt (ev.luthers) 1711 te Tunnickenborn,Dl, glasblazer, overleden 5 oktober 1730 te K&ouml;nigsteel,DL op 19-jarige leeftijd
 
 
 <HR>
 Generatie VI
-<BR><B><A NAME="VI.1"></A> VI.1</B><B> Catharina Elisabeth PELGRIM</B><A NAME="ID58"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt 13 oktober 1734 te Königsteel,DL, overleden 1 april 1814 te Dalem (Vuren),GL op 79-jarige leeftijd. Tr. 15 februari 1760 te Amsterdam,NH <A NAME="ID64"></A><B>Abraham WIEGEL</B>, geboren ong. 1733 te Altm&uuml;nden(Glash&uuml;tte), Dl, gedoopt 1733 te Holzhausen,DL, begraven 8 december 1803 te Leerdam,ZH.
+<BR><B><A NAME="VI.1"></A> VI.1</B><B> Catharina Elisabeth PELGRIM</B><A NAME="ID58"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt 13 oktober 1734 te K&ouml;nigsteel,DL, overleden 1 april 1814 te Dalem (Vuren),GL op 79-jarige leeftijd. Tr. 15 februari 1760 te Amsterdam,NH <A NAME="ID64"></A><B>Abraham WIEGEL</B>, geboren ong. 1733 te Altm&uuml;nden(Glash&uuml;tte), Dl, gedoopt 1733 te Holzhausen,DL, begraven 8 december 1803 te Leerdam,ZH.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -115,7 +115,7 @@ Generatie VI
 </OL>
 
 
-<BR><B><A NAME="VI.2"></A> VI.2</B><B> Johann Ulrich  (Jan) PELGRIM (PILGRAM)</B><A NAME="ID50"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Geboren ong. 1737 te Königsteel,DL, glasblazer/eigenaar glasbl.rij, overleden 6 mei 1799 te Vuren,GL. Tr. 5 oktober 1760 te Amsterdam,NH <A NAME="ID51"></A><B>Maria BOSKOOPER</B>, geboren ong. 1739 te Amsterdam,NH, huisvrouw.
+<BR><B><A NAME="VI.2"></A> VI.2</B><B> Johann Ulrich  (Jan) PELGRIM (PILGRAM)</B><A NAME="ID50"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Geboren ong. 1737 te K&ouml;nigsteel,DL, glasblazer/eigenaar glasbl.rij, overleden 6 mei 1799 te Vuren,GL. Tr. 5 oktober 1760 te Amsterdam,NH <A NAME="ID51"></A><B>Maria BOSKOOPER</B>, geboren ong. 1739 te Amsterdam,NH, huisvrouw.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -131,7 +131,7 @@ Generatie VI
 </OL>
 
 
-<BR><B><A NAME="VI.3"></A> VI.3</B><B> Johan Caspar Melchior (Casparus) PELGRIM</B><A NAME="ID59"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 12 maart 1738 te Königsteel,DL, glasblazer, medeoprichter fabr, overleden  op 67-jarige leeftijd, begraven 18 februari 1806 te Vuren,GL. Tr.(1)  13 januari 1765 te Edam,NH <A NAME="ID68"></A><B>Johanna Francina SLIEKER</B>, gedoopt 5 maart 1747 te Amersfoort,UT.
+<BR><B><A NAME="VI.3"></A> VI.3</B><B> Johan Caspar Melchior (Casparus) PELGRIM</B><A NAME="ID59"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 12 maart 1738 te K&ouml;nigsteel,DL, glasblazer, medeoprichter fabr, overleden  op 67-jarige leeftijd, begraven 18 februari 1806 te Vuren,GL. Tr.(1)  13 januari 1765 te Edam,NH <A NAME="ID68"></A><B>Johanna Francina SLIEKER</B>, gedoopt 5 maart 1747 te Amersfoort,UT.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -150,7 +150,7 @@ Tr.(2)  15 mei 1774 te Leerdam,UT <A NAME="ID266"></A><B>Lena de BRUIN</B>, gebo
 </OL>
 
 
-<BR><B><A NAME="VI.4"></A> VI.4</B><B> Catharina Sophia PELGRIM</B><A NAME="ID60"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 25 juli 1740 te Königsteel,DL. Tr. 22 mei 1763 te Amsterdam,NH <A NAME="ID65"></A><B>Johan George  (Jurgen) MEEDER</B>, gedoopt (ev.luthers) 1 juli 1742 te Königsteel,DL.
+<BR><B><A NAME="VI.4"></A> VI.4</B><B> Catharina Sophia PELGRIM</B><A NAME="ID60"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 25 juli 1740 te K&ouml;nigsteel,DL. Tr. 22 mei 1763 te Amsterdam,NH <A NAME="ID65"></A><B>Johan George  (Jurgen) MEEDER</B>, gedoopt (ev.luthers) 1 juli 1742 te K&ouml;nigsteel,DL.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -162,7 +162,7 @@ Tr.(2)  15 mei 1774 te Leerdam,UT <A NAME="ID266"></A><B>Lena de BRUIN</B>, gebo
 </OL>
 
 
-<BR><B><A NAME="VI.5"></A> VI.5</B><B> Johannes Albertus (Albert) PELGRIM</B><A NAME="ID61"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 9 januari 1743 te Königsteel,DL, glasblazer/mede oprichter fabr, overleden 21 oktober 1824 te Vuren,GL op 81-jarige leeftijd. Tr. 7 augustus 1767 te Amsterdam,NH <A NAME="ID104"></A><B>Margaretha (Grietje) WEEMERS</B>, geboren ong. 1748, gedoopt (ev.luthers) , overleden 4 september 1827 te Vuren,GL.
+<BR><B><A NAME="VI.5"></A> VI.5</B><B> Johannes Albertus (Albert) PELGRIM</B><A NAME="ID61"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 9 januari 1743 te K&ouml;nigsteel,DL, glasblazer/mede oprichter fabr, overleden 21 oktober 1824 te Vuren,GL op 81-jarige leeftijd. Tr. 7 augustus 1767 te Amsterdam,NH <A NAME="ID104"></A><B>Margaretha (Grietje) WEEMERS</B>, geboren ong. 1748, gedoopt (ev.luthers) , overleden 4 september 1827 te Vuren,GL.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -174,7 +174,7 @@ Tr.(2)  15 mei 1774 te Leerdam,UT <A NAME="ID266"></A><B>Lena de BRUIN</B>, gebo
 </OL>
 
 
-<BR><B><A NAME="VI.6"></A> VI.6</B><B> Arnold Christiaan (Christiaan) PELGRIM</B><A NAME="ID62"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 5 september 1745 te Königsteel,DL, glasblazer?, overleden 8 januari 1814 te Vuren,GL op 68-jarige leeftijd. Tr. 20 september 1771 te Heukelom,ZH <A NAME="ID83"></A><B>Johanna van de BERG</B>, geboren ong. 1748.
+<BR><B><A NAME="VI.6"></A> VI.6</B><B> Arnold Christiaan (Christiaan) PELGRIM</B><A NAME="ID62"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Gedoopt (ev.luthers) 5 september 1745 te K&ouml;nigsteel,DL, glasblazer?, overleden 8 januari 1814 te Vuren,GL op 68-jarige leeftijd. Tr. 20 september 1771 te Heukelom,ZH <A NAME="ID83"></A><B>Johanna van de BERG</B>, geboren ong. 1748.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
@@ -182,7 +182,7 @@ Tr.(2)  15 mei 1774 te Leerdam,UT <A NAME="ID266"></A><B>Lena de BRUIN</B>, gebo
 </OL>
 
 
-<BR><B><A NAME="VI.7"></A> VI.7</B><B> Frederik George (Frederik Jurgen) PELGRIM</B><A NAME="ID229"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Geboren 31 maart 1750 te Isselt,GL, gedoopt (ev.luthers) 31 mei 1750 te Amersfoort,UT, glasblazer/mede oprichter fabr, overleden 22 april 1829 te Vuren,GL op 79-jarige leeftijd. Tr. 25 juli 1773 te Leerdam,UT <A NAME="ID131"></A><B>Maria Catharina (Christina) SLIEKER</B>, geboren 25 juli 1751 te Königsteel,DL, gedoopt 24 augustus 1751 te Königsteel,DL, overleden  op 57-jarige leeftijd, begraven 25 augustus 1808 te Vuren,GL.
+<BR><B><A NAME="VI.7"></A> VI.7</B><B> Frederik George (Frederik Jurgen) PELGRIM</B><A NAME="ID229"></A> [<A HREF="#ID52">V</A>] [<A HREF="#ID53">M</A>]. Geboren 31 maart 1750 te Isselt,GL, gedoopt (ev.luthers) 31 mei 1750 te Amersfoort,UT, glasblazer/mede oprichter fabr, overleden 22 april 1829 te Vuren,GL op 79-jarige leeftijd. Tr. 25 juli 1773 te Leerdam,UT <A NAME="ID131"></A><B>Maria Catharina (Christina) SLIEKER</B>, geboren 25 juli 1751 te K&ouml;nigsteel,DL, gedoopt 24 augustus 1751 te K&ouml;nigsteel,DL, overleden  op 57-jarige leeftijd, begraven 25 augustus 1808 te Vuren,GL.
 
 <BR><I>Uit dit huwelijk:</I>
 <OL type=" start=" 1">
