--- a/hoofdpagina-reserve.html
+++ b/hoofdpagina-reserve.html
@@ -113,7 +113,7 @@ A:HOVER {text-decoration: underline;}
                     <p align="left">
                     <font color="#800000" face="Verdana" size="2">
                     <a target="_blank" href="http://pelgrimachternaam.hyves.nl/">
-                    <font color="#800000">Pelgrim-Pelgrom-Pelgröm Hyve (Martin 
+                    <font color="#800000">Pelgrim-Pelgrom-Pelgr&ouml;m Hyve (Martin 
                     Pelgrim)</font></a></font></li>
                   <li>
                     <p align="left">
