--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type"
-content="text/html; charset=iso-8859-1">
+content="text/html; charset=utf-8">
 <meta name="keywords"
 content="pelgrim,pellegrim,pellegrom,pelgrom,pelgrum,pilgram,pilgrim,pelgrin,meijvogel,roepman,  
 genealogie,genealogy,familie,clazien maasdam,wim van vugt,organ,organs,orgel,orgels,orgelbouwer,
@@ -10,14 +10,14 @@ familie pelgrim,pelgrimfamilie,oude foto's,familie foto's,wiegel,
 meeder,meder,slieker,debolds,culemborg,hillegom,schiedam,leerdam,sachsa,bad sachsa,badsachsa,
 glasblazer,glasblazen,glasblazers,ADRIAANSE,AHRMANN,AITINK,AKKERMAN,ALBERS,ALKEMA,ALPHENAAR,AMES,ANGENANT,ANGKOTTA,APEL,ARDES,ARING,AULMANN,BAAKMAN,BAAS,BAKKER,BANGE,BARNEVELD,
 BARTELS,BASTEIN,BATZ,BECKER,BEDEE,BEETS,BEIJER,BEIJERMAN,BEKERS,BELL,BENNINK,BERENDS,BERENDSEN,BERENSCHOT,BERGERS,BERGMAN,BERGSHOEF,BERKERVELDER,BERKHOUT,BESSELING,BESSELINK,
-BETCKE,BHADRESA,BICKERS,BIERHOF,BIESTERBOSCH,BIJKERK,BIJL,BIK,BISSELINK,BLEUMERS,BLINK,BLOK,BLOM,BOEKHOORN,BOER de,BOERE,BOERKAMP,BOET,BOL,BONEKAMP,BöNING,BOOMGAARDEN,BOON,
+BETCKE,BHADRESA,BICKERS,BIERHOF,BIESTERBOSCH,BIJKERK,BIJL,BIK,BISSELINK,BLEUMERS,BLINK,BLOK,BLOM,BOEKHOORN,BOER de,BOERE,BOERKAMP,BOET,BOL,BONEKAMP,B&ouml;NING,BOOMGAARDEN,BOON,
 BOONMAN,BOONSTRA, BORKUS,BOS,BOSKOOPER,BRAND,BRIENEN,BROEKHOF,BROEKSMIT,BROKKEN,BROUWERS,BRUGGEN,BRUGMAN,BRUIJN,BRUIJNE,BRUS,BRUSSE,BUIJTLIGT,BUIS,BUISMAN,BULSINK,BURGERS,
 CAESAR,CAMPER,CARLIER,CARLOS,CENTEN,CHOENNIE,CLAUSING,COGELS,CRAIVANGER/KRAAIJVANGER,CREMER,CROMWIJK,DANEN,DANIEL,DASHORST,DAWSON,DAWSON II,de BEUS,de BOER,de BROUWER,
 de BRUIJN,de BRUIN,de GEUS,de GRAAF,de GROOT,de HAAN,de HEIJ,de HOOP,de JONG,de JONGE,de KNIKKER,de VOS van STEENWIJK van ESSEN,de VRIES,de VRIJ,de WAARD,de WEERT,de WILDE,
 de WIT,de ZWART,DEBETS,DEBOLDS,DECHEIVER de BAERE,DECRAUW,DEE,DEIJS,DEKKERS,den HARTOG,den OUTER,DERKSEN,DEURLO,DIBBETS,DICKER/DIKKER/DIEKER,DIECKER,DIESVELD,DIJKHOF,DIJNEN,
 DIJS,DIKKER,DOGTEROM,DOMSELAAR,DONKEL,DONKER,DONKERS,DOORNEKAMP,DROOGLEVER,DRUBEL,EIJCKHOFF,EKELMANS,ELDERS,ELSINK,ELSKEN,ELZEVIER,ELZINGA,ENGELS,EPPING,ERKENS,ESCHWEILER,
 ETH,EVERS,FALTER,FANGMANN,FEENSTRA,FRANKEN, GALLIS,GANZEVLES,GEELHOED,GEERTS,GELLING,GELLINGS,GERBER,GERK,GERRITSE,GERRITSEN,GESTEL,GIEBELS,GIELINK,GLAS,GLASBERGEN,GOEDHART,
-GöKEN,GOOTINK,GOOZEN,GOUWENS,GRELMAN,GRIJNS,GROENEVELD,GROOTHOFF(GROOTHOF),GROOTNIBBELINK,GROOTVELD,GUNDELACH,HAAGEN, HAAN,HAGEMEISTER,HAGEN,HAGENOUW,HAKKENBERG van GAASBEEK,
+G&ouml;KEN,GOOTINK,GOOZEN,GOUWENS,GRELMAN,GRIJNS,GROENEVELD,GROOTHOFF(GROOTHOF),GROOTNIBBELINK,GROOTVELD,GUNDELACH,HAAGEN, HAAN,HAGEMEISTER,HAGEN,HAGENOUW,HAKKENBERG van GAASBEEK,
 HAMERSLAG,HARLEMA,HARREMAN,HARRIJVAN,HARTMANS,HATTINK,HAZE,HEGEMAN,HEINEBAL,HEISTER,HEMELRIJK,HEMRIKA,HENDRIKS,HENDRIKSEN,HERBERS,HERDER,HERMSE,HERTROYS,HEUTHORST,HIELTJES,
 HILDEBRAND,HINRICHS,HOEBOER,HOEKX,HOFMAN,HOLLANDER,HOOGELAND,HOOGENBOOM,HOOGERVORST,HOOGLAND,HOOIJMAN,HOORNWEG,HOPPENREIS, HOREISE,HOUTERMAN,HOUTMAN,HUIJZER,HUIS in 't VELD,
 HUISMAN,HUNNINGHAUSEN,HURENKAMP,IDENBURG,IJSSELDIJK,IMMELMANN,in 't VELD,IPSKAMP,JAARTSVELD,JANSEN,JANSSEN,JETTEN,JIBBEN,JONGEBREUR,JOOST,JOZIASSE,JUTTEN,KAAK,KAALBERG,
@@ -28,7 +28,7 @@ KRUIS,KRUITBOS,KUIJPERS,KUIPER,KUIPERS,KUTSCHR&uuml;TER,La FONTAINE,LACROIX,LAGE
 LIGTHART,LINTHORST,LOBBERS,LOBBERT,LOKKERBOL,LONDON,LOOIJAARD,LOOSE,LOT,LOUWS,LUBKE, LUCASSEN,LUGTHART,LUSSENBURG,MAATEN,MAK,MANTES,MARTENS,MAST,MATTHESIUS,MEDZE,MEEDER,
 MEESTERS,MEIJVOGEL,MEKKES,MENGELERS, MENSINK,MESLIER,MEUG,MEULEMAN,MEULENBROEK,MOOIJ,MOOLHUIZEN,MUD(T),M&uuml;LLER,MULDER,MUNNEKE,NAGELMAEKER,NANLOHY,NEELS,NICOLA,NIEUWELINK,
 NIEUWKOOP,NIJENHUIS,NIJHOF,NOUWEN,NUIJEN,NUKOOP,NOCKHORST,OLDENTOEF,OLIVIER,OOMS,OOSTERMAN,OOSTING,OOSTWAL,OPBROEK,OPDEYN,OPDUIN,OPSCHOOR,OUBOTER,OUDIJN,PALING,PALM,PAUEL, 
-PEEKELS,PEETOOM,PELGERUM,PELGRIM,PELGRIM (PILGRAM),PELGRöM,PELGRUM,PELGRUMS,PELLEGRIM,PELLEGROM,PELT,PESCHIER,PETERS,PETTERSON, PHILIPPO,PIEDERIET,PIER,PIJNENBURG,PILGRAM,
+PEEKELS,PEETOOM,PELGERUM,PELGRIM,PELGRIM (PILGRAM),PELGR&ouml;M,PELGRUM,PELGRUMS,PELLEGRIM,PELLEGROM,PELT,PESCHIER,PETERS,PETTERSON, PHILIPPO,PIEDERIET,PIER,PIJNENBURG,PILGRAM,
 PILGRIM,PLEIZIER,PLOEG,PLOEGER,POEZE,POL,POMPE,POPPELIERS,PORSIUS,POST,POSTMA,PRANGER, PRIEM,PRINS,PRONK,PROUVEUR,QUIVOOY,RABELINK,REIJNEN,RENIERS,RENS (RINS),
 REULINGH(REULINK),RIBBINK,RIEPEN,RIJSDAM,ROELFSEMA,ROELOFS, ROELOFSEN,ROEPMAN,ROES,ROMEIN,ROORDING,ROOZEBOOM,ROZING,RUGGENBERG,RUITER-LOBBERT,RUMP,RUUMPOL,SAARLOOS,SCHAAF,
 SCHAAP,SCHEEFHALS,SCHEERES,SCHELL,SCHELLEVIS,SCHEPERS,SCHERMERS,SCHILLEMANS,SCHIPPERS,SCHLIEKER,SCHMITZ,SCHOLTEN,SCHONBERG,SCHOOLENBERG,SCHOONENBOOM,SCHOOT,SCHOTSMAN,
