--- a/Floortje2.htm
+++ b/Floortje2.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD>
-<META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
+<META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META content="Microsoft FrontPage 4.0" name=GENERATOR>
 <STYLE></STYLE>
 <title></title>
